# Warzone-OLD

./: .gitattributes  CMakeLists.txt  README.md  TEST-BUILD-INSTALL-HOWTO.txt  WARZONE-CREDITS.txt
ECHO_MAPS/: ECHOMAPS.map.txt  Echo's Maps.txt
ECHO_MAPS/WZ_Tatooine/: readme.txt
ECHO_MAPS/mandalore/: readme.txt
MAUI_MODEL_CONVERSIONS/: anvil_palm_trunk.nif  anvilgianttrunk.nif
MAUI_TREE_CONVERSIONS/: 1mjypalmtree2.nif  beachpalm2.nif  beachpalm3.nif  beachpalm4.nif  fanpalm2.nif  flatpalm2.nif  gkbjungletreenew11v2weeping.nif  gkbjungletreenew23v2weeping.nif  gkbjungletreenew23v2weepinghalf.nif  gkbjungletreenew24v2weeping.nif  gkbjungletreenew24v2weepinghalf.nif  gkbjungletreenew25v2tropical.nif  gkbjungletreenew25v2weeping.nif  gkbjungletreenew26v2weeping.nif  gkbjungletreenew26v2weepinghalf.nif  gkbjungletreenew27v2weeping.nif  gkbjungletreenew28v2weeping.nif  manfern.nif  palmtree01.nif  palmtree02.nif  palmtree2.nif  palmtree3.nif  palmtree4.nif  tree21.nif  tree22.nif  tree26.nif  tree27.nif  tree34.nif  tree39.nif
OJK_ASSETS/: modelscale.cfg  openjk.cfg
OJK_ASSETS/atmospherics/: lightning_flash2.efx
OJK_ASSETS/botfiles/: bots.txt
OJK_ASSETS/effects/: blood_sparks_50_mp.efx  fireBall.efx  projectile.efx  rain.efx
OJK_ASSETS/nodes/: CTF_Wayland.bwp  Carida_academyv2.bwp  Cloudmorning.bwp  CoruscantStreets.bwp  EpIIIPalpatineRooftopFinalMap2.bwp  Taris_RP.bwp  Taris_RP.cpw  YavinBattle.bwp  academy6.bwp  bespin_platform.bwp  cloudcity.bwp  ctf_fighterbays.bwp  ctf_imperial.cpw  ctf_ppdisabledII.bwp  day_moseisley_backstreets.bwp  dex_club.bwp  ffa_deathstar.bwp  ffa_geonosis.bwp  ffa_ns_streets.bwp  ffa_ns_streets.cpw  icm_ctf3.bwp  kotor_dantooine_enclave.bwp  mb2_smuggler.bwp  mb2_tatooine.bwp  t1_danger.bwp  t1_fatal.bwp  t1_sour.bwp  t1_sour.cpw  t1_surprise.bwp  t2_rancor.cpw  t2_rogue.bwp  t3_bounty.cpw  t3_byss.bwp  t3_hevil.bwp  tatooine_nights_v2.bwp  tatooine_nights_v2.cpw  vjun1.bwp  vjun3.bwp  volcano2a.bwp  yavin1.cpw  (+3 more)
OJK_ASSETS/scripts/: coop.arena
OJK_ASSETS/shaders/: ClonetrooperVM.shader  DtAjf.shader  KC_anakin.shader  Keldorshader.shader  MandalorianVM.shader  aotc_weapons.shader  arioche.shader  blood.shader  cinematics.shader  eeth.shader  enhancedeffects.shader  gl_dooku.shader  hoth_test_terrain.shader  items.shader  j.shader  jnegretetest.shader  jsf_.shader  juggernaut_hat.shader  kiadi.shader  marks.shader  n1_mst.shader  n1omber_mst.shader  naboocrusier_hat.shader  players.shader  prisonertransp.shader  q3map.shader  ravensclawvm.shader  rbettenbergtest.shader  scavenger.shader  sebulba_pod.shader  shaderlist.txt  ships.shader  show7_reborn.shader  siege.shader  stap_mc.shader  (+10 more)
OJKassets/: openjk.cfg
WARZONE_ASSETS_OUTSIDE_PK3/: UNIQ README.txt
WARZONE_EXTRAS_PK3/: modelscale.cfg
codemp/: CMakeLists.txt
codemp/rd-warzone/: CMakeLists.txt  G2_API.cpp  compose_models.cpp  compose_models.h  nuklear.h  qgl.h  tr_WorldEffects.cpp  tr_animation.cpp  tr_awesomium.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cache.cpp  tr_cmds.cpp  tr_debug.cpp  tr_debug.h  tr_extensions.cpp  tr_extramath.h  tr_extratypes.h  tr_fbo.cpp  tr_flares.cpp  tr_foliage.cpp  tr_ghoul2.cpp  tr_glsl.cpp  tr_image.cpp  tr_init.cpp  tr_instancing.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mapping.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_nuklear_gui.cpp  tr_occlusion.cpp  tr_occlusion.h  tr_ocean.cpp  tr_ocean.h  tr_optimization.cpp  tr_postprocess.cpp  (+14 more)
codemp/rd-warzone/MaskedOcclusionCulling/: CullingThreadpool.cpp  CullingThreadpool.h  MaskedOcclusionCulling.h  MaskedOcclusionCullingAVX2.cpp
codemp/rd-warzone/glsl/: anaglyph_fp.glsl  anaglyph_vp.glsl  anamorphic_blur_fp.glsl  anamorphic_combine_fp.glsl  anamorphic_combine_vp.glsl  bloom_blur_fp.glsl  bloom_blur_vp.glsl  bokeh_fp.glsl  clouds_fp.glsl  compact.cpp  darkexpand_fp.glsl  darkexpand_vp.glsl  depthOfField2_fp.glsl  depthOfField2_vp.glsl  depthOfField_fp.glsl  depthOfField_vp.glsl  depthblur_vp.glsl  dglow_downsample_fp.glsl  dglow_upsample_fp.glsl  dlight_fp.glsl  down4x_fp.glsl  down4x_vp.glsl  esharpening2_fp.glsl  esharpening_fp.glsl  fakeDepthSteepParallax_fp.glsl  fakeDepthSteepParallax_vp.glsl  fakeDepth_fp.glsl  fakeDepth_vp.glsl  fogpass_fp.glsl  fogpass_vp.glsl  fxaa_fp.glsl  fxaa_vp.glsl  gaussian_blur_fp.glsl  generateNormalMap_fp.glsl  generateNormalMap_vp.glsl  generic_fp.glsl  generic_vp.glsl  hbaoCombine_fp.glsl  hbao_fp.glsl  lensflare_fp.glsl  (+60 more)
codemp/rd-warzone/glsl-unoptimized/: anamorphic_blur_fp.glsl  bloom_blur_fp.glsl  dlight_fp.glsl  gaussian_blur2_vp.glsl  generateAlbedoMap_fp.glsl  generic_fp.glsl  photoshop_glsl_includes.glsl  ssao2_vp.glsl  ssgi3_fp.glsl  ssgi4_fp.glsl  surfaceSprite_fp.glsl  surfaceSprite_vp.glsl  testshader_fp.glsl  underwater_vp.glsl  uniquegrass_fp.glsl  uniquegrass_vp.glsl  uniquesky_fp.glsl  uniquesky_vp.glsl  uniquewater_fp.glsl
codemp/rd-warzone/glsl2/: bloomRays_fp.glsl  cellShade_fp.glsl  colorCorrection_fp.glsl  deferredLighting_fp.glsl  depthAdjust_fp.glsl  depthAdjust_vp.glsl  depthPass_fp.glsl  depthPass_vp.glsl  depthToNormal_fp.glsl  distanceBlur_fp.glsl  distanceBlur_vp.glsl  fastBlur_fp.glsl  fire_fp.glsl  fogPost_fp.glsl  fogPost_vp.glsl  foliage_cs.glsl  foliage_fp.glsl  foliage_gs.glsl  fur_fp.glsl  fur_gs.glsl  fur_vp.glsl  grass2_cs.glsl  grass2_es.glsl  grass2_fp.glsl  grass2_gs.glsl  grass2_vp.glsl  grass3_fp.glsl  grass3_gs.glsl  grass3_vp.glsl  grass_fp.glsl  grass_vp.glsl  instance_fp.glsl  instance_vp.glsl  magicdetail_fp.glsl  occlusion_fp.glsl  occlusion_vp.glsl  pebbles_fp.glsl  pebbles_gs.glsl  pebbles_vp.glsl  planet_fp.glsl  (+39 more)
codemp/rd-warzone/imgui/: imgui_impl_idtech3_gles.cpp
codemp/rd-warzone/imgui_docks_openjk/: dock_all.cpp  dock_controlflow.cpp  dock_mapinfo.cpp  dock_mdxm.cpp  dock_mdxm.h  dock_models.cpp  dock_perf.cpp  dock_postprocess.cpp  dock_shadereditor.h
codemp/rd-warzone/imgui_openjk/: imgui_openjk_default_docks.cpp  imgui_openjk_default_docks.h
intel_optimized_builds/: ! Requirements - READ ME !.txt
lib/: assimp-vc140-mt.lib  navlib.lib  wz-occlusion.lib
tools/: wzmap-win64.rar
(+2875 files in other folders)
